v-v-v correction working great

--- a/research/nlp_tests.ipynb
+++ b/research/nlp_tests.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "[None]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,46 +854,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pattern.en import conjugate, lemma, lexeme, INFINITIVE, PRESENT, PAST, FUTURE, SG, PL, INDICATIVE, IMPERATIVE, CONDITIONAL, SUBJUNCTIVE, PROGRESSIVE "
+    "from pattern.en import conjugate, lemma, lexeme, INFINITIVE, PRESENT, PAST, PARTICIPLE, FUTURE, SG, PL, INDICATIVE, IMPERATIVE, CONDITIONAL, SUBJUNCTIVE, PROGRESSIVE "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cry\n"
+      "downloaded\n"
      ]
     }
    ],
    "source": [
-    "print(conjugate(verb='cry', tense=PRESENT, mood=INDICATIVE, person=1, number=PL)) # add aspect=PROGRESSIVE to indicate continuous tense"
+    "print(conjugate(verb='downloading', tense=PAST, mood=INDICATIVE, person=1, number=PL)) # add aspect=PROGRESSIVE to indicate continuous tense"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       swim_VBN                  \n",
-      "   _______|_________________      \n",
-      "  |       |        |      in_IN  \n",
-      "  |       |        |        |     \n",
-      "  |       |        |     river_NN\n",
-      "  |       |        |        |     \n",
-      "He_PRP has_VBZ  been_VBN  the_DT \n",
+      "       sleeping_VBG         \n",
+      "   _________|__________      \n",
+      "ram_NN   has_VBZ    been_VBN\n",
       "\n"
      ]
     },
@@ -903,32 +899,30 @@
        "[None]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "doc2 = en_nlp(\"He has been swim in the river\")\n",
+    "doc2 = en_nlp(\"ram has been sleeping\")\n",
     "[to_nltk_tree(sent.root).pretty_print() for sent in doc2.sents]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       sat_VBD        \n",
-      "   _______|_______     \n",
-      "  |             on_IN \n",
-      "  |               |    \n",
-      "  |            wall_NN\n",
-      "  |               |    \n",
-      "He_PRP          the_DT\n",
+      "                  drink_NN                                  \n",
+      "    _________________|________________________________       \n",
+      "   |        |        |            ram_NN           since_IN \n",
+      "   |        |        |        ______|_______          |      \n",
+      "have_VBP been_VBN   ._.    and_CC        shyam_NN evening_NN\n",
       "\n"
      ]
     },
@@ -938,13 +932,13 @@
        "[None]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "doc2 = en_nlp(\"He sat on the wall\")\n",
+    "doc2 = en_nlp(\"ram and shyam have been drink since evening.\")\n",
     "[to_nltk_tree(sent.root).pretty_print() for sent in doc2.sents]"
    ]
   },
@@ -962,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,23 +978,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['has_VBZ', 'been_VBN', 'cooking_VBN'], ['have_VBP', 'been_VBN', 'swimming_VBN']]\n"
+      "Ramu and shyam have been drinking since evening.\n"
      ]
     }
    ],
    "source": [
-    "doc2 = en_nlp(\"They have been swimming in the river while mother has been cooking\")\n",
+    "import spacy\n",
+    "from nltk import Tree\n",
+    "\n",
+    "en_nlp = spacy.load('en')\n",
+    "rtext = \"Ramu and shyam have been drink since evening.\"\n",
+    "doc2 = en_nlp(rtext)\n",
     "combos = []\n",
     "for sent in doc2.sents:\n",
-    "    VB_VB_VB(sent.root)\n",
-    "print(combos)"
+    "    rtext = VB_VB_VB_correction(sent.root, rtext)\n",
+    "print(rtext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def VB_VB_VB_correction(payload, raw_text):\n",
+    "    if(payload.tag_[:2] != 'VB' and payload.tag_[:2] != 'NN'  and payload.tag_[:2] != 'JJ'):\n",
+    "        return\n",
+    "    for ch in payload.children:\n",
+    "        if(ch.tag_[:2] == 'VB'): # this might need to be removed\n",
+    "            VB_VB_VB_correction(ch, raw_text)\n",
+    "    temp = []\n",
+    "    nounBeforeVerb = False\n",
+    "    nounAfterVerb = False\n",
+    "    verbFound = False\n",
+    "    since = False\n",
+    "    for ch in payload.children:\n",
+    "        if(ch.tag_[:2] == 'VB'):\n",
+    "            verbFound = True\n",
+    "        if((not verbFound) and (ch.tag_[:2] == 'NN' or ch.tag_[:2] == 'PR')):\n",
+    "            nounBeforeVerb = True\n",
+    "        if(verbFound and (ch.tag_[:2] == 'NN' or ch.tag_[:2] == 'PR')):\n",
+    "            nounAfterVerb = True\n",
+    "        if(ch.lower_ == 'since'):\n",
+    "            since = True\n",
+    "    for ch in payload.children:\n",
+    "        if(ch.tag_[:2] == 'VB'):\n",
+    "            # print(ch.idx)\n",
+    "            temp.append(ch.lower_ + '_' + ch.tag_)\n",
+    "        if(len(temp) == 2):\n",
+    "            temp.append(payload.lower_+ '_' + ch.tag_)\n",
+    "            #print(temp)\n",
+    "            if (temp[0][-3:] == 'VBZ' or temp[0][-3:] == 'VBP') and temp[1][-3:] == 'VBN':\n",
+    "                if nounAfterVerb or since:\n",
+    "                    x = conjugate(verb=lemma(temp[2][:-4]), tense=PRESENT, mood=INDICATIVE, aspect=PROGRESSIVE, person=1, number=PL)\n",
+    "                elif nounBeforeVerb:\n",
+    "                    x = conjugate(verb=lemma(temp[2][:-4]), tense=PAST+PARTICIPLE, mood=INDICATIVE, person=1, number=PL)\n",
+    "                # print(temp[2][:-4] + ' -> ' + x)\n",
+    "            combos.append(temp)\n",
+    "            # print(nounBeforeVerb)\n",
+    "            raw_text = raw_text[:payload.idx] + raw_text[payload.idx:].replace(temp[2][:-4], x, 1)\n",
+    "            #print(raw_text)\n",
+    "            temp = []\n",
+    "            return raw_text\n",
+    "    return raw_text"
    ]
   },
   {
