table of corrections

--- a/research/sentence_structure.ipynb
+++ b/research/sentence_structure.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'attr': 'H', 'auxpass': 'J', 'nmod': 'a', 'appos': 'G', 'ccomp': 'M', 'csubjpass': 'Q', 'expl': 'V', 'punct': 'o', 'pobj': 'i', 'relcl': 'q', 'dative': 'R', 'poss': 'j', 'root': 'r', 'compound': 'N', 'agent': 'E', 'cc': 'L', 'oprd': 'f', 'aux': 'I', 'meta': 'Y', 'advcl': 'C', 'npmod': 'b', 'intj': 'W', 'acomp': 'B', 'neg': 'Z', 'prep': 'm', 'conj': 'O', 'preconj': 'k', 'npadvmod': 'b', 'parataxis': 'g', 'amod': 'F', 'quantmod': 'p', 'acl': 'A', 'xcomp': 's', 'det': 'T', 'dep': 'S', 'nounmod': 'a', 'prt': 'n', 'mark': 'X', 'dobj': 'U', 'nsubjpass': 'd', 'nummod': 'e', 'predet': 'l', 'case': 'K', 'pcomp': 'h', 'nsubj': 'c', 'advmod': 'D', 'csubj': 'P'}\n"
+      "{'nounmod': 'a', 'predet': 'l', 'dep': 'S', 'prep': 'm', 'nsubjpass': 'd', 'nsubj': 'c', 'acomp': 'B', 'appos': 'G', 'parataxis': 'g', 'root': 'r', 'ccomp': 'M', 'csubjpass': 'Q', 'relcl': 'q', 'case': 'K', 'pcomp': 'h', 'det': 'T', 'nmod': 'a', 'preconj': 'k', 'acl': 'A', 'advmod': 'D', 'auxpass': 'J', 'nummod': 'e', 'dobj': 'U', 'meta': 'Y', 'oprd': 'f', 'expl': 'V', 'csubj': 'P', 'agent': 'E', 'intj': 'W', 'aux': 'I', 'pobj': 'i', 'quantmod': 'p', 'advcl': 'C', 'amod': 'F', 'prt': 'n', 'conj': 'O', 'neg': 'Z', 'npmod': 'b', 'attr': 'H', 'poss': 'j', 'punct': 'o', 'compound': 'N', 'mark': 'X', 'cc': 'L', 'npadvmod': 'b', 'xcomp': 's', 'dative': 'R'}\n"
      ]
     }
    ],
@@ -37,7 +37,10 @@
     "# deprecated labels to be taken care of\n",
     "deps_dict['npadvmod'] = 'b'\n",
     "deps_dict['nmod'] = 'a'\n",
-    "print(deps_dict)"
+    "print(deps_dict)\n",
+    "\n",
+    "import numpy as np\n",
+    "np.save('deps_dict.npy', deps_dict)"
    ]
   },
   {
@@ -49,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cIrTDFHbo:1:1\n",
-      "wrong :      cIrDFHbo\n",
-      "correction : cIrTDFHbo\n",
+      "cIrjFHmio:3:1\n",
+      "wrong :      cIrDFHmio\n",
+      "correction : cIrjFHmio\n",
       "position : 1\n"
      ]
     }
@@ -234,6 +237,7 @@
    "source": [
     "import os\n",
     "\n",
+    "import numpy as np\n",
     "from sympound import sympound\n",
     "\n",
     "import platform\n",
@@ -254,7 +258,7 @@
     "    sc_dict = np.load('sentence_correction_dict.npy').item()\n",
     "    \n",
     "    ssc.load_dictionary(\"sentence_codes.txt\", term_index=0, count_index=1)\n",
-    "    payload = encode_sentence('Ronaldo has been most consistent performer today.')\n",
+    "    payload = encode_sentence('Ronaldo has been most consistent performer on today.')\n",
     "    \n",
     "    if payload in sc_dict:\n",
     "        print('correct!')\n",
@@ -291,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'O': 'conj', 'i': 'pobj', 'X': 'mark', 'N': 'compound', 'p': 'quantmod', 'I': 'aux', 'V': 'expl', 'b': 'npadvmod', 'a': 'nmod', 'q': 'relcl', 'A': 'acl', 'd': 'nsubjpass', 'C': 'advcl', 'U': 'dobj', 'T': 'det', 'j': 'poss', 'E': 'agent', 'K': 'case', 'n': 'prt', 'M': 'ccomp', 'm': 'prep', 'c': 'nsubj', 'W': 'intj', 'F': 'amod', 'l': 'predet', 'B': 'acomp', 'Q': 'csubjpass', 'Z': 'neg', 'L': 'cc', 'Y': 'meta', 'S': 'dep', 'R': 'dative', 'r': 'root', 's': 'xcomp', 'D': 'advmod', 'f': 'oprd', 'k': 'preconj', 'h': 'pcomp', 'H': 'attr', 'G': 'appos', 'o': 'punct', 'g': 'parataxis', 'P': 'csubj', 'e': 'nummod', 'J': 'auxpass'}\n"
+      "{'h': 'pcomp', 'i': 'pobj', 'Z': 'neg', 'Q': 'csubjpass', 'K': 'case', 'B': 'acomp', 'g': 'parataxis', 'o': 'punct', 'U': 'dobj', 'R': 'dative', 'A': 'acl', 'j': 'poss', 'S': 'dep', 'f': 'oprd', 'W': 'intj', 'm': 'prep', 'G': 'appos', 'F': 'amod', 'd': 'nsubjpass', 's': 'xcomp', 'C': 'advcl', 'Y': 'meta', 'I': 'aux', 'l': 'predet', 'n': 'prt', 'q': 'relcl', 'V': 'expl', 'k': 'preconj', 'D': 'advmod', 'r': 'root', 'T': 'det', 'N': 'compound', 'O': 'conj', 'a': 'nmod', 'E': 'agent', 'p': 'quantmod', 'c': 'nsubj', 'e': 'nummod', 'L': 'cc', 'H': 'attr', 'b': 'npadvmod', 'P': 'csubj', 'J': 'auxpass', 'X': 'mark', 'M': 'ccomp'}\n"
      ]
     }
    ],
@@ -319,7 +323,10 @@
     "# deprecated labels to be taken care of\n",
     "inv_deps_dict['b'] = 'npadvmod'\n",
     "inv_deps_dict['a'] = 'nmod'\n",
-    "print(inv_deps_dict)"
+    "print(inv_deps_dict)\n",
+    "\n",
+    "import numpy as np\n",
+    "np.save('inv_deps_dict.npy', inv_deps_dict)"
    ]
   },
   {
@@ -359,9 +366,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cIrDTHmio:9223372036854775807:1\n",
+      "wrong :      cIrDFHmio\n",
+      "correction : cIrDTHmio\n"
+     ]
+    }
+   ],
    "source": [
     "def correct():\n",
     "    # ssc.create_dictionary_entry(\"bonjour\", 1) # optional, only if adding dictionary items is required\n",
@@ -369,7 +386,7 @@
     "    sc_dict = np.load('sentence_correction_dict.npy').item()\n",
     "    \n",
     "    ssc.load_dictionary(\"sentence_codes.txt\", term_index=0, count_index=1)\n",
-    "    payload = encode_sentence('Ronaldo has been most consistent performer today.')\n",
+    "    payload = encode_sentence('Ronaldo has been most consistent performer in today.')\n",
     "    \n",
     "    if payload in sc_dict:\n",
     "        print('correct!')\n",
@@ -394,8 +411,6 @@
     "    correct_broke = list(result[0])\n",
     "    wrong_broke = list(payload)\n",
     "    \n",
-    "    for i in range()\n",
-    "    \n",
     "    ssc.save_pickle(\"symspell.pickle\")\n",
     "    #ssc.load_pickle(\"symspell.pickle\")\n",
     "\n",
@@ -411,25 +426,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['c', 'I', 'F', 'r', 'T', 'D', 'H', 'b', 'o', 'T']"
+       "['c', 'I', 'F', 'r', 'T', 'D', 'H', 'b', 'o']"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l1 = list('cIFrTDFHboTT')\n",
-    "l2 = list('cIrDFHboTT')\n",
-    "l2, common = l2[:], [ e for e in l1 if e in l2 and (l2.pop(l2.index(e)) or True)]\n",
+    "correct = list('cIFrTDFHboT')\n",
+    "wrong = list('cIrDFHboT')\n",
+    "common = [ e for e in correct if e in wrong and (wrong.pop(wrong.index(e)) or True)]\n",
     "common"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = ['1', '2', '3', '4']\n",
+    "x.pop(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c', 'I', 'r', 'D', 'F', 'H', 'b', 'o', 'T']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrong"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Diff(li1, li2):\n",
+    "    li_dif = [i for i in li1 + li2 if i not in li2]\n",
+    "    return li_dif\n",
+    " \n",
+    "# Driver Code\n",
+    "li1 = ['c', 'I', 'F', 'r', 'T', 'D', 'F', 'H', 'b', 'o', 'T']\n",
+    "li2 = ['c', 'I', 'r', 'D', 'F', 'H', 'b', 'o', 'T']\n",
+    "li3 = Diff(li1, li2)\n",
+    "print(li3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 15, 20, 25, 30, 35, 30, 25, 40, 35, 30]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li1 + li2"
    ]
   },
   {
