algorithm errors fixed

--- a/research/nlp_tests.ipynb
+++ b/research/nlp_tests.ipynb
@@ -387,20 +387,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        jumps                    \n",
-      "  ________|______________         \n",
-      " |        |             over     \n",
-      " |        |              |        \n",
-      " |       fox            dog      \n",
-      " |    ____|_____      ___|____    \n",
-      " .  The quick brown the      lazy\n",
+      "                                 is                                                  \n",
+      "  _______________________________|_________                                           \n",
+      " |     |                                   is                                        \n",
+      " |     |       ____________________________|________________________                  \n",
+      " |     |      |    |   |   |              are             |         |                \n",
+      " |     |      |    |   |   |      _________|_______       |         |                 \n",
+      " |     |      |    |   |   |     |         |      easy    |         do               \n",
+      " |     |      |    |   |   |     |         |       |      |      ___|_____            \n",
+      " |  downside  |    |   |   |     |      programs  use    easy   |      analysis      \n",
+      " |     |      |    |   |   |     |         |       |      |     |    _____|_______    \n",
+      " .    The    that  ,   ,   it because statistical  to  equally  to the          wrong\n",
       "\n"
      ]
     },
@@ -410,7 +414,7 @@
        "[None]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +426,7 @@
     "\n",
     "en_nlp = spacy.load('en')\n",
     "\n",
-    "doc = en_nlp(\"The quick brown fox jumps over the lazy dog.\")\n",
+    "doc = en_nlp(\"The downside is that, because statistical programs are easy to use, it is equally easy to do the wrong analysis.\")\n",
     "\n",
     "def to_nltk_tree(node):\n",
     "    if node.n_lefts + node.n_rights > 0:\n",
