--- a/research/sentence_structure.ipynb
+++ b/research/sentence_structure.ipynb
@@ -52,25 +52,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cIrnmjio\n"
+      "nsubjauxrootpunct\n"
      ]
     }
    ],
    "source": [
     "import spacy\n",
     "nlp = spacy.load('en_core_web_sm')\n",
-    "doc = nlp(\"I am going out with my family.\")\n",
+    "doc = nlp(\"We are walking.\")\n",
     "\n",
     "sent_struct = []\n",
     "for token in doc:\n",
-    "    sent_struct.append(deps_dict[token.dep_.lower()])\n",
+    "    sent_struct.append(token.dep_.lower())\n",
     "\n",
     "sentence_code = ''.join(sent_struct)\n",
     "print(sentence_code)"
