--- a/research/nlp_tests.ipynb
+++ b/research/nlp_tests.ipynb
@@ -440,20 +440,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      walk_VB              \n",
-      "   ______|____________      \n",
-      "  |      |     |   down_IN \n",
-      "  |      |     |      |     \n",
-      "  |      |     |  street_NN\n",
-      "  |      |     |      |     \n",
-      "I_PRP  am_VBP ._.   the_DT \n",
+      "                 plays_ROOT_VBZ               \n",
+      "        _______________|______________         \n",
+      "       |                          in_prep_IN  \n",
+      "       |                              |        \n",
+      "       |                        garden_pobj_NN\n",
+      "       |                              |        \n",
+      "children_nsubj_N                  the_det_DT  \n",
+      "       NS                                     \n",
       "\n"
      ]
     },
@@ -463,7 +464,7 @@
        "[None]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,10 +476,10 @@
     "\n",
     "en_nlp = spacy.load('en')\n",
     "\n",
-    "doc = en_nlp(\"I am walk down the street.\")\n",
+    "doc = en_nlp(\"children plays in the garden\")\n",
     "\n",
     "def tok_format(tok):\n",
-    "    return \"_\".join([tok.orth_, tok.tag_])\n",
+    "    return \"_\".join([tok.orth_, tok.dep_, tok.tag_])\n",
     "\n",
     "\n",
     "def to_nltk_tree(node):\n",
@@ -490,6 +491,18 @@
     "\n",
     "[to_nltk_tree(sent.root).pretty_print() for sent in doc.sents]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
